# cc-pydata-nameless

./: Pipfile  README.rst  azure-pipelines.yml  setup.cfg  setup.py
.github/workflows/: python-package.yml  test-matrix.yml
docs/: conf.py  index.rst  modules.rst
src/cc_pydata_nameless/: __init__.py  __main__.py  cli.py
src/cc_pydata_nameless/data/: __init__.py
src/cc_pydata_nameless/features/: __init__.py
src/cc_pydata_nameless/logger/: __init__.py
src/cc_pydata_nameless/models/: __init__.py
src/cc_pydata_nameless/visualizations/: __init__.py
tests/: test_cc_pydata_nameless.py
tests/data/: test_data.py
tests/features/: test_features.py
tests/logger/: test_logger.py
tests/models/: test_models.py
tests/visualizations/: test_visualizations.py
